vuejs/vuejs-tests/testData/highlighting/emptyAttributeValue/emptyAttributeValue.vue
<template>
  <div <error descr="Vue: v-for has invalid expression.">v-for=</error>></div>
</template>